fixed signup page on small screens

--- a/src/components/signup-view/signup-view.scss
+++ b/src/components/signup-view/signup-view.scss
@@ -17,9 +17,9 @@
 	text-decoration: none;
 	color: #ff4500;
 	font-size: 00.75em;
-	margin-top: 10px;
     position: relative;
-    bottom: 67px;
+    bottom: 72px;
+    margin-top: 17px;
 }
 
 
